--- a/openapi/templates/data_class.mustache
+++ b/openapi/templates/data_class.mustache
@@ -1,15 +1,17 @@
 /**
  * {{{description}}}
-{{~#vars}} 
+{{#vars}}
  * @param {{name}} {{{description}}}
-{{~/vars~}}
+{{/vars}}
  */
 data class {{classname}} (
-{{~#requiredVars~}}
-    {{>data_class_req_var}}{{^@last}},{{/@last}}
-{{~/requiredVars~}}
+{{#requiredVars}}
+{{>data_class_req_var}}{{^@last}},{{/@last}}
+{{/requiredVars}}
 {{#has this 'required'}}{{#has this 'optional'}},{{/has}}{{/has}}
-{{~#optionalVars}}{{>data_class_opt_var}}{{^@last}},{{/@last}}{{/optionalVars}}
+{{#optionalVars}}
+{{>data_class_opt_var}}{{^@last}},{{/@last}}
+{{/optionalVars}}
 ) {
 {{#has this 'enums'}}{{#vars}}{{#is this 'enum'}}
     /**
@@ -18,7 +20,7 @@ data class {{classname}} (
     */
     enum class {{nameInCamelCase}}(val value: {{datatype}}){
     {{#allowableValues}}{{#enumVars}}
-        {{&name}}({{{value}}}){{^@last}},{{/@last}}{{#@last}};{{/@last}}
+        {{&name}}({{#value}}{{{value}}}{{/value}}{{^value}}null{{/value}}){{^@last}},{{/@last}}{{#@last}};{{/@last}}
     {{/enumVars}}{{/allowableValues}}
     }
 {{/is}}{{/vars}}{{/has}}
